      taxing and pillaging are month-long orders.  The AUTOTAX flag, when
      this is set, is still used, but now what it means is that a unit
      with this flag will tax if a) no other orders have been given for
      the unit and b) it is capable of taxing.  (IE, the autotax flag
      makes the units default order TAX instead of WORK)
   -- Fixed bug that caused monster generation to hang if unable to generate
      monsters because all of them were disabled.
   -- Fixed a typo which had storm giants and cloud giants having the same tag
   -- Fixed up the code slightly so that if you defined NEXUS_IS_CITY it
      actually gives the nexus some sort of items and population.
   -- Fixed up the code slightly so that starting citys aren't created if you
      set TOWNS_EXIST to false.
   -- Fixed up the code so that gates aren't created and gate lore is disabled
      if GATES_EXIST is set to false.
   -- Fixed bug where large maps were coring all over themselves due to
      a stack smash.  Stupid bug.
   -- Fixed another bug where regions got trashed when you managed (say
      during world creation) to create more than 10000 units in a turn.

TODO
----------------
   -- GIVE ALL TRADE (to give away all trade goods) (other categories for
      other obvious flags) (maybe.. there are issues with this)
   -- BUY ALL/SELL ALL
   -- Improve the item/hex editor
   -- Gamedef to handle various options around combat/weapons/bows for taxing
   -- Gamedefs for various economy options. (far future)
   -- Gamedef for alternate nexus layouts
   -- Give more information when SHOW <item> is done.
   -- Add option to allow towers/forts/etc to allow training only a certain
      number of mages.
   -- Consider more complicated GIVE processing of 'GIVE ALL EXCEPT .....'
   -- Consider requiring both food and pay for upkeep.
   -- Merchent skill (limited number of merchents)/Limited number
      of tacticians/generals?